MESSAGE("============================================================================================================")
MESSAGE(STATUS "CMAKE_BINARY_DIR                  = " ${CMAKE_BINARY_DIR})
MESSAGE(STATUS "CMAKE_CURRENT_BINARY_DIR          = " ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "CMAKE_SOURCE_DIR                  = " ${CMAKE_SOURCE_DIR})
MESSAGE(STATUS "CMAKE_CURRENT_SOURCE_DIR          = " ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "PROJECT_BINARY_DIR                = " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "PROJECT_SOURCE_DIR                = " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "EXECUTABLE_OUTPUT_PATH            = " ${EXECUTABLE_OUTPUT_PATH})
MESSAGE(STATUS "LIBRARY_OUTPUT_PATH               = " ${LIBRARY_OUTPUT_PATH})
MESSAGE(STATUS "CMAKE_MODULE_PATH                 = " ${CMAKE_MODULE_PATH})
MESSAGE(STATUS "CMAKE_COMMAND                     = " ${CMAKE_COMMAND})
MESSAGE(STATUS "CMAKE_ROOT                        = " ${CMAKE_ROOT})
MESSAGE(STATUS "CMAKE_CURRENT_LIST_FILE           = " ${CMAKE_CURRENT_LIST_FILE})
MESSAGE(STATUS "CMAKE_CURRENT_LIST_LINE           = " ${CMAKE_CURRENT_LIST_LINE})
MESSAGE(STATUS "CMAKE_INCLUDE_PATH                = " ${CMAKE_INCLUDE_PATH})
MESSAGE(STATUS "CMAKE_LIBRARY_PATH                = " ${CMAKE_LIBRARY_PATH})
MESSAGE(STATUS "CMAKE_SYSTEM                      = " ${CMAKE_SYSTEM})
MESSAGE(STATUS "CMAKE_SYSTEM_NAME                 = " ${CMAKE_SYSTEM_NAME})
MESSAGE(STATUS "CMAKE_SYSTEM_VERSION              = " ${CMAKE_SYSTEM_VERSION})
MESSAGE(STATUS "CMAKE_SYSTEM_PROCESSOR            = " ${CMAKE_SYSTEM_PROCESSOR})
MESSAGE(STATUS "UNIX                              = " ${UNIX})
MESSAGE(STATUS "WIN32                             = " ${WIN32})
MESSAGE(STATUS "APPLE                             = " ${APPLE})
MESSAGE(STATUS "MINGW                             = " ${MINGW})
MESSAGE(STATUS "CYGWIN                            = " ${CYGWIN})
MESSAGE(STATUS "BORLAND                           = " ${BORLAND})
MESSAGE(STATUS "MSVC                              = " ${MSVC})
MESSAGE(STATUS "MSVC_IDE                          = " ${MSVC_IDE})
MESSAGE(STATUS "MSVC60                            = " ${MSVC60})
MESSAGE(STATUS "MSVC70                            = " ${MSVC70})
MESSAGE(STATUS "MSVC71                            = " ${MSVC71})
MESSAGE(STATUS "MSVC80                            = " ${MSVC80})
MESSAGE(STATUS "CMAKE_COMPILER_2005               = " ${CMAKE_COMPILER_2005})
MESSAGE(STATUS "CMAKE_SKIP_RULE_DEPENDENCY        = " ${CMAKE_SKIP_RULE_DEPENDENCY})
MESSAGE(STATUS "CMAKE_SKIP_INSTALL_ALL_DEPENDENCY = " ${CMAKE_SKIP_INSTALL_ALL_DEPENDENCY})
MESSAGE(STATUS "CMAKE_SKIP_RPATH                  = " ${CMAKE_SKIP_RPATH})
MESSAGE(STATUS "CMAKE_VERBOSE_MAKEFILE            = " ${CMAKE_VERBOSE_MAKEFILE})
MESSAGE(STATUS "CMAKE_SUPPRESS_REGENERATION       = " ${CMAKE_SUPPRESS_REGENERATION})
MESSAGE(STATUS "CMAKE_C_FLAGS                     = " ${CMAKE_C_FLAGS})
MESSAGE(STATUS "CMAKE_CXX_FLAGS                   = " ${CMAKE_CXX_FLAGS})
MESSAGE(STATUS "CMAKE_BUILD_TYPE                  = " ${CMAKE_BUILD_TYPE})
MESSAGE(STATUS "BUILD_SHARED_LIBS                 = " ${BUILD_SHARED_LIBS})
MESSAGE(STATUS "CMAKE_C_COMPILER                  = " ${CMAKE_C_COMPILER})
MESSAGE(STATUS "CMAKE_CXX_COMPILER                = " ${CMAKE_CXX_COMPILER})
MESSAGE(STATUS "CMAKE_COMPILER_IS_GNUCC           = " ${CMAKE_COMPILER_IS_GNUCC})
MESSAGE(STATUS "CMAKE_COMPILER_IS_GNUCXX          = " ${CMAKE_COMPILER_IS_GNUCXX})
MESSAGE(STATUS "CMAKE_AR                          = " ${CMAKE_AR})
MESSAGE(STATUS "CMAKE_RANLIB                      = " ${CMAKE_RANLIB})

MESSAGE("============================================================================================================")
GET_CMAKE_PROPERTY(_variableNames VARIABLES)
FOREACH (_variableName ${_variableNames})
    message(STATUS "${_variableName} = ${${_variableName}}")
ENDFOREACH ()

MESSAGE("============================================================================================================")
IF (${WIN32})
    MESSAGE(STATUS "This is built in Windows")
ELSE ()
    MESSAGE(STATUS "This is NOT built in Windows")
ENDIF ()

MESSAGE("============================================================================================================")
FIND_PACKAGE(boost 1.58.0 REQUIRED COMPONENTS regex)
MESSAGE(STATUS "BOOST_INCLUDE_DIR: " ${BOOST_INCLUDE_DIR})
MESSAGE(STATUS "BOOST_LIBRARIES: " ${BOOST_LIBRARIES})

MESSAGE("============================================================================================================")
FIND_PACKAGE(gflags)
MESSAGE(STATUS "gflags_INCLUDE_DIR: " ${gflags_INCLUDE_DIR})
MESSAGE(STATUS "gflags_LIBRARIES: " ${gflags_LIBRARIES})

MESSAGE("============================================================================================================")
SET(SNAPPY_INCLUDE_DIR "C:/Program Files (x86)/Snappy/include")
SET(SNAPPY_LIBRARIES "C:/Program Files (x86)/Snappy/lib/libsnappy.a")
FIND_PACKAGE(snappy)
MESSAGE(STATUS "SNAPPY_INCLUDE_DIR: " ${SNAPPY_INCLUDE_DIR})
MESSAGE(STATUS "SNAPPY_LIBRARIES: " ${SNAPPY_LIBRARIES})

MESSAGE("============================================================================================================")
SET(ZLIB_INCLUDE_DIR "C:/Program Files (x86)/zlib/include")
SET(ZLIB_LIBRARIES "C:/Program Files (x86)/zlib/lib/libzlibstatic.a")
FIND_PACKAGE(zlib)
MESSAGE(STATUS "ZLIB_INCLUDE_DIR: " ${ZLIB_INCLUDE_DIR})
MESSAGE(STATUS "ZLIB_LIBRARIES: " ${ZLIB_LIBRARIES})

MESSAGE("============================================================================================================")
SET(BZIP2_INCLUDE_DIR "C:/Program Files (x86)/bzip2/include")
SET(BZIP2_LIBRARIES "C:/Program Files (x86)/bzip2/lib/libbz2.dll.a")
FIND_PACKAGE(bzip2)
MESSAGE(STATUS "BZIP2_INCLUDE_DIR: " ${BZIP2_INCLUDE_DIR})
MESSAGE(STATUS "BZIP2_LIBRARIES: " ${BZIP2_LIBRARIES})

MESSAGE("============================================================================================================")
SET(LZ4_INCLUDE_DIR "C:/Program Files (x86)/lz4/include")
SET(LZ4_LIBRARIES "C:/Program Files (x86)/lz4/lib/liblz4.dll.a")
FIND_PACKAGE(lz4)
MESSAGE(STATUS "LZ4_INCLUDE_DIR: " ${LZ4_INCLUDE_DIR})
MESSAGE(STATUS "LZ4_LIBRARIES: " ${LZ4_LIBRARIES})

MESSAGE("============================================================================================================")
SET(ZSTD_INCLUDE_DIR "C:/Program Files (x86)/zstd/include")
SET(ZSTD_LIBRARIES "C:/Program Files (x86)/zstd/lib/libzstd.a")
FIND_PACKAGE(zstd)
MESSAGE(STATUS "ZSTD_INCLUDE_DIR: " ${ZSTD_INCLUDE_DIR})
MESSAGE(STATUS "ZSTD_LIBRARIES: " ${ZSTD_LIBRARIES})

MESSAGE("============================================================================================================")
